# local_video

./: .gitignore  .wsl-port-forward.sh  AGENTS.md  BUILD.md  CMakeLists.txt  README-WINDOWS.md  README.md  build-linux.sh  build-windows.sh  linker-mingw.ld  linker.ld  videos
.github/workflows/: build.yml
.trae/skills/: bugfix-workflow  feature  project
.trae/skills/framework-design/: SKILL.md
.trae/skills/interface-design/: SKILL.md
cmake/: mingw-w64-toolchain.cmake
docs/: README.md  模块系统.md
docs/windows/: CMakeLists-windows.legacy.txt  README.md
docs/开发记录/: 初始化记录.md
specs/: API文档.md  产品概述.md  使用流程.md  开发规范.md  开发路线图.md  技术栈.md  架构设计.md  项目结构.md
specs/features/: Phase-1.2-共享基础设施-模块化机制.md  Phase-1.2-共享基础设施-模块化机制_任务规划.md  Phase-1.2-共享基础设施-模块化机制_技术方案.md  目录黑名单功能.md  目录黑名单功能_任务规划.md  目录黑名单功能_变更任务_CR-001.md  目录黑名单功能_技术方案.md
src/: main.c
src/include/: local_video.h  platform.h
src/modules/api_handler/: api_endpoints.c  api_handler.c  api_handler.h  api_handler_internal.h  api_response.c  api_utils.c
src/modules/config/: config.c  config.h
src/modules/db_manager/: db_manager.c  db_manager.h  db_manager_blacklist.c  db_manager_directory.c  db_manager_internal.h  db_manager_settings.c  db_manager_user.c  db_manager_video.c
src/modules/http_server/: http_request.c  http_request.h  http_response.c  http_response.h  http_server.c  http_server.h  http_server_file.c  http_server_internal.h  http_server_stream.c  http_server_thumbnail.c
src/modules/video_scanner/: video_scanner.c  video_scanner.h  video_scanner_internal.h  video_scanner_scan.c  video_scanner_watcher.c
src/shared/json/: json.c  json.h
src/shared/list/: list.h
src/shared/log/: log.c  log.h
src/shared/module/: module.c  module.h
src/shared/notifier/: notifier.c  notifier.h
src/shared/platform/: platform.c
src/shared/thread/: thread.c  thread.h
tests/unit/: test_db_manager.c  test_json.c  test_list.c  test_log.c  test_module.c  test_notifier.c  test_thread.c  test_video_scanner.c
tools/opencode/: README.md  generate_config.js  generate_correct_config.js  generate_proper_config.js  package-lock.json  package.json  parse_models.js
web/static/: index.html  manifest.json  sw.js
web/static/css/: style.css
web/static/js/: api.js  app.js  common.js  modal.js  player.js  settings.js
